# zenkat-rust

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
dev-docs/: architecture.md  design.md  roadmap.md
docs/: api.md  architecture.md  commonmark-pseudo.txt  commonmark.txt  ideas.md  peg.txt  roadmap.md  state-problem.md
python/: mock-server.py  parse.py  sample.md
src/: common.rs  main.rs
src/common/: node.rs  tree.rs  zk_request.rs  zk_response.rs
src/md-parse/: main.rs
src/zenkat/: app_state.rs  main.rs  query_parser.rs  tree_store.rs  zk_query_parser.rs
src/zenkat.old/: query_parser.rs  tree_store.rs
src/zk-cmd/: main.rs
src/zk-parse/: main.rs
