[package]
name = "zenkat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-process = "2.2.0"
clap = { version = "4.5.4", features = ["derive"] }
nom = "7.1.3"

[[bin]]
name = "zenkat"
path = "src/zenkat/main.rs"

[[bin]]
name = "zk-parse"
path = "src/zk-parse/main.rs"
