[package]
name = "zenkat"
version = "0.1.0"
edition = "2021"
default-run = "zenkat"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-process = "2.2.0"
clap = { version = "4.5.4", features = ["derive"] }
nom = "7.1.3"
serde = {version="1.0.197", features=["derive"]}
serde_json = "1.0.115"
tokio = { version ="1.37.0", features = ["full"]}

[[bin]]
name = "zenkat"
path = "src/zenkat/main.rs"

[[bin]]
name = "md-parse"
path = "src/md-parse/main.rs"
