[package]
name = "zenkat"
version = "0.1.0"
edition = "2021"
default-run = "zenkat"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-process = "2.2.0"
axum = "0.7.5"
clap = { version = "4.5.4", features = ["derive"] }
nom = "7.1.3"
reqwest = {version = "0.12.4", features = ["json"]}
serde = {version="1.0.197", features=["derive"]}
serde_json = "1.0.115"
tokio = { version ="1.37.0", features = ["full"]}
uuid = { version = "1.8.0", features = ["v4"]}

[[bin]]
name = "zenkat"
path = "src/zenkat/main.rs"

[[bin]]
name = "md-parse"
path = "src/md-parse/main.rs"

[[bin]]
name = "zk-cmd"
path = "src/zk-cmd/main.rs"
